<resources>
    <string name="app_name">YellowCarsCounter</string>
    <string name="app_title">Yellow Cars Counter</string>
    <string name="app_title_upper">YELLOW CARS COUNTER</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="username">Username</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="register">Register</string>
    <string name="choosefriend">Choose a friend to play with</string>
    <string name="home">Home</string>
    <string name="counter">Counter</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="haveaniceday">Have A Nice Day</string>
    <string name="language">Language</string>
    <string name="sk_language">Slovak</string>
    <string name="en_language">English</string>
    <string name="choose_language">Choose language</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="resend_forgot__password_0">To reset password enter your email,</string>
    <string name="resend_forgot__password_1">press send button and check email to follow instruction.</string>
    <string name="started_game_with">You started a game with </string>
    <string name="enjoy">. Enjoy!</string>
    <string name="thats_your_account">That\'s your account </string>
    <string name="fields_are_empty">Fields are empty</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="register_problem">Register Problem</string>
    <string name="profile_updated">Profile Updated</string>
    <string name="error">ERROR Ocured</string>
    <string name="my_account">My Account</string>
    <string name="all_users">All Users</string>
    <string name="user_logout">User Logout</string>
    <string name="no_user_with_email">- No user with this email address exist!</string>
    <string name="fill_empty_fields">Fill Empty Fields</string>
    <string name="email_send">Email Send</string>
    <string name="login_problem">Login Problem</string>
    <string name="negative_number">Negative number of cars?</string>
    <string name="you_kidding">Are you kidding?</string>

</resources>
