<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <include
        android:id="@+id/toolbar"
        layout="@layout/app_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="center">

        <ImageView
            android:src="@drawable/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimaryDark">

        <EditText
            android:id="@+id/et_email_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/email"
            android:textSize="18dp"
            android:padding="16dp"
            android:background="@drawable/edit_text_shape"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/username"
            android:textSize="18dp"
            android:padding="16dp"
            android:background="@drawable/edit_text_shape"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/et_password_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/password"
            android:textSize="18dp"
            android:padding="16dp"
            android:background="@drawable/edit_text_shape"
            android:inputType="textPassword"/>
        <EditText
            android:id="@+id/et_conf_password_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/confirmpassword"
            android:textSize="18dp"
            android:padding="16dp"
            android:background="@drawable/edit_text_shape"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/b_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_marginTop="24dp"
            android:textColor="@color/black"
            android:text="@string/register"/>
    </LinearLayout>

</LinearLayout>