<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:src="@drawable/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"/>
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:textSize="32sp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/white"
                android:text="@string/welcome"/>

            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/haveaniceday"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="32dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/b_go_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="16dp"
            android:text="@string/login"/>
        <Button
            android:id="@+id/b_go_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@color/colorPrimary"
            android:text="@string/register"/>
    </LinearLayout>

</RelativeLayout>